<resources>
    <string name="app_name">BukaGambar</string>
    <string name="jual_barang">Mulai Jualan</string>
    <string name="lanjutkan_button">Lanjutkan</string>
    <string name="simpan_button">Simpan</string>
    <string name="simpandraf_button">Simpan Draf</string>
    <string name="uploadgambar_button">Upload dari Galeri</string>
    <string name="jual_button">Jual</string>
    <string name="keterangan_barang">Keterangan Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="ket_nama_barang">Tuliskan nama barang yang dijual</string>
    <string name="kategori_barang">Kategori Barang</string>
    <string name="ket_kategori_barang">Atur kategori barang yang dijual</string>
    <string name="deskripsi_barang">Deskripsi Barang</string>
    <string name="ket_deskripsi_barang">Tuliskan keterangan barang yang dijual</string>
    <string name="detail_barang">Detail Barang</string>
    <string name="ket_detail_barang">Atur detail barang yang dijual</string>
    <string name="pengiriman">Pengiriman (Optional)</string>
    <string name="ket_pengiriman">Atur jasa pengiriman barang yang dijual</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="judul_sub_kategori">Judul</string>
    <string name="text_music">Music</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="ket_harga_barang">Tuliskan harga barang yang dijual</string>
    <string name="kualitas_barang">Kualitas Barang</string>
    <string name="ket_kul_barang">Tuliskan kualitas barang yang dijual</string>
    <string name="spek_barang">Spesifikasi Barang</string>
    <string name="ket_spek_barang">"Atur spesifikasi barang yang dijual"</string>
    <string name="T1_namabarang">Masukkan nama barang jualan kamu</string>
    <string name="T2_namabarang">Nama barang ini akan muncul di daftar barang jualan kamu</string>
    <string name="hint_namabarang">Contoh, iPhone 5S Gold 16GB</string>
    <string name="T1_deskripsibarang">Tuliskan deskripsi barang jualan kamu</string>
    <string name="T2_deskripsibarang">iphone 6s</string>
    <string name="T3_deskripsibarang">Handphone/HP &amp; Smartphone</string>
    <string name="hint_deskripsibarang">Tulis deskripsi barang di sini</string>
    <string name="T1_kategoribarang">Pilih kategori jualan kamu</string>
    <string name="T2_kategoribarang">Pilih kategori sesuai dengan nama barang jualan kamu</string>
    <string name="T1_spekbarang">Atur spesifikasi barang jualan kamu</string>
    <string name="T2_spekbarang">Pilih spesifikasi terkait barang jualan kamu, seperti merek, fitur, dimensi, dll</string>
    <string name="T3_kategoribarang">Saran Kategori</string>
    <string name="s1_kategoribarang">Handphone / Aksesoris handphone / Casing &amp; Cover</string>
    <string name="s2_kategoribarang">Handphone / Spare Part &amp; Tools Handphone</string>
    <string name="s3_kategoribarang">Handphone / Aksesoris handphone / Screen Guard</string>
    <string name="s4_kategoribarang">Handphone / Aksesoris handphone / Aksesoris Lain</string>
    <string name="s5_kategoribarang">Handphone / HP &amp; Smartphone</string>
    <string name="loading">Harap tunggu...</string>
    <string name="kembali">Kembali</string>
    <string name="T4_kategoribarang">Semua Kategori</string>
    <string-array name="daftar_kategori">
        <item name="s6_kategoribarang">Perawatan &amp; Kecantikan</item>
        <item name="s7_kategoribarang">Kesehatan</item>
        <item name="s8_kategoribarang">Fashion Wanita</item>
        <item name="s9_kategoribarang">Fashion Pria</item>
        <item name="s10_kategoribarang">Handphone</item>
        <item name="s11_kategoribarang">Komputer</item>
        <item name="s12_kategoribarang">Elektronik</item>
    </string-array>
    <string name="T1_detailbarang">Atur detail barang jualan kamu</string>
    <string name="T2_detailbarang">Perkiraan Berat</string>
    <string name="T3_detailbarang">Stok Barang</string>
    <string name="T4_detailbarang">Harga Barang Satuan</string>
    <string name="gram">Gram</string>
    <string name="buah">Buah</string>
    <string name="rupiah">Rp</string>
    <string name="grosir">Harga Grosir</string>
    <string name="barangbaru">Barang Baru</string>
    <string name="Label">Label Barang</string>
    <string name="T1_pengirimanbarang">Atur pengiriman penjualan kamu</string>
    <string name="T2_pengirimanbarang">Pengaturan jasa pengiriman termasuk asuransi dari pengaturan gratis biaya kirim</string>
    <string name="wajibasuransi">Wajib Asuransi</string>
    <string name="gratisbiaya">Gratis Biaya Kirim</string>
    <string-array name="daftar_daerah">
        <item name="d1">Seluruh Indonesia</item>
        <item name="d2">Pulau Jawa</item>
        <item name="d3">Jabodetabekkar</item>
        <item name="d4">Bali</item>
        <item name="d5">Banten</item>
        <item name="d6">Bengkulu</item>
        <item name="d7">Daerah Istimewa Yogyakarta</item>
        <item name="d8">DKI Jakarta</item>
        <item name="d9">Gorontalo</item>
        <item name="d10">Jambi</item>
        <item name="d11">Jawa Barat</item>
        <item name="d12">Jawa Tengah</item>
        <item name="d13">Jawa Timur</item>
        <item name="d14">Kalimantan Barat</item>
        <item name="d15">Kalimantan Selatan</item>
        <item name="d16">Kalimantan Tengah</item>
        <item name="d17">Kalimantan Timur</item>
        <item name="d18">Kalimantan Utara</item>
    </string-array>
    <string name="nol">0</string>
    <string name="nol_rupiah">0,-</string>
    <string name="T1_uploadgambar">Upload gambar jualan kamu</string>
    <string name="T2_uploadgambar">Ukuran foto minimal 300x300px, dengan format JPG, JPEG, PNG, BMP, dan GIF.</string>
    <string name="gambar_utama">Gambar Utama</string>
    <string name="gambar_lainnya">Gambar Lainnya</string>
    <string name="upload_galeri">Upload dari Gallery</string>
    <string name="tambah_gambar">Tambah Gambar</string>
    <string name="unggahan_selesai">Unggahan Selesai</string>
    <string name="foto_palsu">Foto kamu teridentifikasi milik orang lain</string>
    <string name="upload_lain">Silahkan upload foto lain</string>
    <string name="upload_selesai">Unggahan Selesai</string>
    <string name="OK">OK</string>

</resources>