<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_lighten_5"
    tools:context="com.example.bukagambarfrontend.NamaBarangActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detailActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_lighten_4"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/close_detailbarang_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/exit_button_width"
            android:layout_height="@dimen/exit_button_height"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/grey_darken"/>

        <Button
            android:id="@+id/lanjutkan_detailbarang_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="end"
            android:text="@string/lanjutkan_button"
            android:textAllCaps="false"
            android:textColor="@color/grey_darken"
            android:textSize="@dimen/text_size" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/teks_1_detailbarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:text="@string/T1_detailbarang"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:textStyle="normal"/>


    <TextView
        android:id="@+id/teks_2_detailbarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:text="@string/T2_detailbarang"
        android:textColor="@color/grey_darken"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/list_size"/>

    <EditText
        android:id="@+id/editText_gram"
        android:inputType="number"
        android:hint="@string/nol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:backgroundTint="@color/grey"
        android:textAlignment="textStart"
        android:textColor="@color/grey" />

    <EditText
        android:id="@+id/editText_buah"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:inputType="number"
        android:backgroundTint="@color/grey"
        android:hint="@string/nol"/>


    <com.example.bukagambarfrontend.PrefixEditText
        android:id="@+id/editText_satuan"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:backgroundTint="@color/grey"
        android:tag="Rp "
        android:hint="@string/nol_rupiah"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <View style="@style/Divider" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/grosir_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/grosir"
        android:textColor="@color/grey"
        android:textSize="@dimen/list_size"
        android:theme="@style/checkBoxStyle"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <View style="@style/Divider" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/baru_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/barangbaru"
        android:textColor="@color/grey"
        android:textSize="@dimen/list_size"
        android:theme="@style/checkBoxStyle"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"/>


    <View style="@style/Divider" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/label_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/Label"
        android:textColor="@color/grey"
        android:textSize="@dimen/list_size"
        android:theme="@style/checkBoxStyle"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/margin_bottom"/>



    <View style="@style/Divider" />


</LinearLayout>

