<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_lighten_5"
    tools:context="com.example.bukagambarfrontend.NamaBarangActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_kategoriActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_lighten_4"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/close_kategoribarang_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/exit_button_width"
            android:layout_height="@dimen/exit_button_height"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/grey_darken" />

        <Button
            android:id="@+id/lanjutkan_kategoribarang_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="end"
            android:text="@string/lanjutkan_button"
            android:textAllCaps="false"
            android:textColor="@color/grey_darken"
            android:textSize="@dimen/text_size_normal" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/teks_1_kategoribarang"
        android:text="@string/T1_kategoribarang"
        android:layout_below="@id/toolbar_kategoriActivity"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/top"
        android:textStyle="normal"
        style="@style/textStyle"/>


    <TextView
        android:id="@+id/teks_2_kategoribarang"
        android:layout_below="@id/teks_1_kategoribarang"
        android:text="@string/T2_kategoribarang"
        android:textColor="@color/grey"
        android:textAllCaps="false"
        android:textSize="@dimen/list_size"
        style="@style/textStyle"/>

    <TextView
        android:id="@+id/teks_3_kategoribarang"
        android:layout_below="@id/teks_2_kategoribarang"
        android:text="@string/T4_kategoribarang"
        android:textColor="@color/grey"
        android:textAllCaps="false"
        android:textSize="@dimen/list_size"
        style="@style/textStyle"/>


    <ListView
        android:id="@+id/list_of_kategori_saran"
        android:layout_below="@+id/teks_3_kategoribarang"
        style="@style/textStyle"/>



</RelativeLayout>
