<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_lighten_5"
    tools:context="com.example.bukagambarfrontend.NamaBarangActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_namabarangActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_lighten_4"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageButton
            android:id="@+id/close_namabarang_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/exit_button_width"
            android:layout_height="@dimen/exit_button_height"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/grey_darken"/>

        <Button
            android:id="@+id/lanjutkan_namabarang_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="end"
            android:text="@string/lanjutkan_button"
            android:textAllCaps="false"
            android:textColor="@color/grey_darken"
            android:textSize="@dimen/text_size" />


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/teks_1_namabarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/T1_namabarang"
        android:layout_below="@id/toolbar_namabarangActivity"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/grey"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/teks_2_namabarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/T2_namabarang"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:layout_below="@id/teks_1_namabarang"
        android:textSize="14sp"
        android:textColor="@color/grey_lighten_1"
        android:textStyle="normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="@dimen/margin_start"
        android:paddingEnd="@dimen/margin_end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/teks_3_namabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/teks_2_namabarang"
            android:text="@string/nama_barang"
            android:textColor="@color/grey_darken"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_small"/>

        <EditText
            android:id="@+id/editText_namabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/teks_3_namabarang"
            android:backgroundTint="@color/grey"
            android:hint="@string/hint_namabarang"
            android:textColor="@color/grey"
            android:textSize="@dimen/list_size"
            android:textAlignment="textStart"/>
    </LinearLayout>


</LinearLayout>
