<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_spesifikasi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bukagambarfrontend.SpesifikasiActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_spesifikasiActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_lighten_4"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/close_spekbarang_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/exit_button_width"
            android:layout_height="@dimen/exit_button_height"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/grey_darken" />

        <Button
            android:id="@+id/simpan_spekbarang_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="end"
            android:text="@string/simpan_button"
            android:textAllCaps="false"
            android:textColor="@color/grey_darken"
            android:textSize="@dimen/text_size_normal" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/inside_spesifikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teks_1_spekbarang"
                android:text="@string/T1_spekbarang"
                android:textSize="@dimen/text_size_big"
                android:textColor="@color/grey"
                android:layout_marginTop="@dimen/top"
                android:textStyle="normal"
                style="@style/textStyle"/>


            <TextView
                android:id="@+id/teks_2_spekbarang"
                android:text="@string/T2_spekbarang"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:textSize="@dimen/list_size"
                style="@style/textStyle"/>

        </LinearLayout>
    </ScrollView>




</LinearLayout>
