<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_lighten_5"
    tools:context="com.example.bukagambarfrontend.StepSatuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_stepsatu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grey_lighten_4"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <ImageButton
                android:id="@+id/close_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/exit_button_width"
                android:layout_height="@dimen/exit_button_height"
                android:layout_alignParentTop="true"
                android:layout_gravity="start"
                android:src="@drawable/ic_close_black_24dp"
                android:tint="@color/grey"/>

            <Button
                android:id="@+id/lanjutkan_1_button"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/lanjutkan_button"
                android:textSize="@dimen/text_size_normal"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="end"
                android:textColor="@color/grey"
                android:textAllCaps="false"/>
        </android.support.v7.widget.Toolbar>

        <include layout="@layout/content_step_satu"/>

    </LinearLayout>


    <LinearLayout android:id="@+id/footer" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true" style="@android:style/ButtonBar"
        android:background="@color/grey_lighten_4">

        <Button
            android:id="@+id/simpan_draf_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/simpandraf_button"
            android:textColor="@color/grey_darken"
            android:background="@color/bg_gray"/>

        <Button
            android:id="@+id/jual_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jual_button"
            android:textColor="@color/grey_lighten_5"
            android:background="@color/pinkdarken2"/>

    </LinearLayout>

</RelativeLayout>
